--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a utility which can be used to maipulate your text in the way you want."
+      content="TextUtils is a word counter and a charactor counting utility which can be used to maipulate your text in the way you want.
+      You can copy the manipulated text as well as convert your text from uppercase to Lowercase and Lowercase tp Uppercase"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon-144x144.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>TextUtils - Home</title>
+    <title>TextUtils - Word Counter | charactor counter | Lowercase to Uppercase | Uppercase to Lowercase </title>
     
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
